<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="100sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textView2">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:minHeight="350sp">

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="@string/titleSearch"
                android:imeOptions="actionDone"
                android:inputType="textShortMessage"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="35sp"
                android:textStyle="italic" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="43dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radioButtonFilms"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    style="@android:style/Widget.Holo.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/radionButtionSeries"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="20sp" />
            </RadioGroup>

            <Button
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/radioGroup"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/radioGroup"
                android:background="@android:color/darker_gray"
                android:text="@string/search"
                android:textColor="@android:color/background_light"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>





